internship-tasks/practicals/kubernetes/Task-2-40/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-2-40-service
  namespace: ayoob-k-ibrahim

spec:
  selector:
    app: task-2-40

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
