internship-tasks/practicals/kubernetes/Task-2-40/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-2-40-ingress
  namespace: ayoob-k-ibrahim

spec:
  ingressClassName: traefik

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: task-2-40-service
            port:
              number: 80
